# tt-mlir

include/ttmlir/Backend/TTNN/: TTNNWrapper.hpp
include/ttmlir/Scheduler/: PrecedenceScheduler.h  QueueScheduler.h  Scheduler.h
lib/: CMakeLists.txt
lib/Backend/TTNN/: CMakeLists.txt  TTNNWrapperLib.cpp  TTNNWrapperLib_Impl.hpp
lib/CAPI/: TTAttrs.cpp
lib/Conversion/StableHLOToTTIR/: StableHLOToTTIRPatterns.cpp
lib/Conversion/TTIRToTTIRDecomposition/: TTIRToTTIRDecomposition.cpp  TTIRToTTIRDecompositionPass.cpp
lib/Conversion/TTIRToTTNN/: TTIRToTTNN.cpp
lib/Conversion/TTKernelToEmitC/: TTKernelToEmitC.cpp
lib/Conversion/TTNNToEmitC/: TTNNToEmitC.cpp
lib/Dialect/TT/IR/: TTOpsTypes.cpp
lib/Dialect/TTIR/IR/: TTIROps.cpp
lib/Dialect/TTNN/Analysis/: DFShardingPolicy.cpp  L1InterleavedPolicy.cpp  MemoryLayoutAnalysis.cpp  ShardSolver.cpp
lib/Dialect/TTNN/IR/: CMakeLists.txt  TTNNOps.cpp  TTNNOpsAttrs.cpp  TTNNOpsBackendInterfaces.cpp
lib/Dialect/TTNN/Pipelines/: TTNNPipelines.cpp
lib/Dialect/TTNN/Transforms/: Optimizer.cpp  Passes.cpp  TTNNLayout.cpp
lib/Scheduler/: CMakeLists.txt  PrecedenceScheduler.cpp  QueueScheduler.cpp  Scheduler.cpp
python/: TTModule.cpp
runtime/include/tt/runtime/: types.h
runtime/lib/: runtime.cpp
runtime/lib/common/: system_desc.cpp
runtime/lib/ttmetal/: command_queue.cpp
runtime/lib/ttnn/: program.cpp  runtime.cpp
runtime/lib/ttnn/operations/: CMakeLists.txt
test/ttmlir/Dialect/TTNN/: test_grid_set.mlir  test_override_reshard_edges.mlir
test/unittests/TestScheduler/: TestScheduler.cpp
(+89 files in other folders)
